fixed overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -739,7 +739,6 @@ a {
   user-select: none;
   // rewrite styles library
   position: absolute !important;
-  overflow: hidden;
 }
 
 .magazine .page {
